# Simple-RGBD-Reconstruction

./: .gitignore  CMakeLists.txt  README.md  intrinsics.txt
app/: CMakeLists.txt  run_realsense.cpp
config/: default.yaml
docs/: index.html  video.html
include/myslam/: IO.h  backend.h  camera.h  common_include.h  config.h  conversion.h  dataset.h  feature.h  frame.h  frontend.h  g2o_types.h  map.h  mapping.h  mappoint.h  viewer.h  visual_odometry.h
src/: CMakeLists.txt  IO.cpp  backend.cpp  camera.cpp  config.cpp  conversion.cpp  dataset.cpp  feature.cpp  frame.cpp  frontend.cpp  map.cpp  mapping.cpp  mappoint.cpp  viewer.cpp  visual_odometry.cpp
